nav bar html and css update

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,52 +22,36 @@
   <body>
     <div class = "page-wraper">
       <header>
-        <nav class = "navigation">
-          <ul class = "navigation__link-wrapper">
-            <li class = "navigation__link">
-              <a href="#">
-                home
-              </a>
-            </li>
-            <li class = "navigation__link">
-              <a href="#">
-                tour
-              </a>
-            </li>
-            <li class = "navigation__link">
-              <a href="#">
-                music
-              </a>
-            </li>
-            <li class = "navigation__link">
-              <a href="#">
-                shop
-              </a>
-            </li>
-          </ul>
+        <div class = "announcement-bar">
+          <nav class = "navigation">
+            <a class = "navigation__link" href="#">
+              home
+            </a>
+            <a class = "navigation__link" href="#">
+              tour
+            </a>
+            <a class = "navigation__link" href="#">
+              music
+            </a>
+            <a class = "navigation__link" href="#">
+              shop
+            </a>
+          </nav>
           
-          <div class = "navigation__logo">RUSTY PINE</div>
+          <div class = "logo">RUSTY PINE</div>
           
-          <div class = "navigation__social-media-wrapper">
-            <ul class = "navigation__social-media-wrapper">
-              <li class = "navigation__social-media">
-                <a href="#">
-                  fb
-                </a>
-              </li>
-              <li class = "navigation__social-media">
-                <a href="#">
-                  insta
-                </a>
-              </li>
-              <li class = "navigation__social-media">
-                <a href="#">
-                  yt
-                </a>
-              </li>
-            </ul>
+          <div class = "social-media">
+            <a class = "social-media__link" href="#">
+              fb
+            </a>
+            <a class = "social-media__link" href="#">
+              insta
+            </a>
+            <a class = "social-media__link" href="#">
+              yt
+            </a>
           </div>
-        </nav>
+        </div>  
       </header>
       <section class = "tour">
 
