fixed navbar and home background image

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -45,7 +45,7 @@
               fb
             </a>
             <a class = "social-media__link" href="#">
-              insta
+              in
             </a>
             <a class = "social-media__link" href="#">
               yt
@@ -53,6 +53,10 @@
           </div>
         </div>  
       </header>
+
+      <section class="home">
+        <!-- <img class="background-image" src="../assets/img/wallpaperflare.com_wallpaper.jpg" alt="forest"> -->
+      </section>
       <section class = "tour">
 
       </section>
