--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,7 +21,13 @@
     <div class="page-wraper">
       <header>
         <div class="announcement-bar">
-          <nav class="announcement-bar__navigation">
+          <div class="menu">
+            <span class="burger-line top-burger"></span>
+            <span class="burger-line middle-burger"></span>
+            <span class="burger-line close-burger"></span>
+            <span class="burger-line bottom-burger"></span>
+          </div>
+          <nav class="navigation">
             <a class="navigation__link" href="#"> home </a>
             <a class="navigation__link" href="#"> tour </a>
             <a class="navigation__link" href="#"> music </a>
