hamburger menu button and navigation

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,17 +21,18 @@
     <div class="page-wraper">
       <header>
         <div class="announcement-bar">
-          <div class="menu">
-            <span class="burger-line top-burger"></span>
-            <span class="burger-line middle-burger"></span>
-            <span class="burger-line close-burger"></span>
-            <span class="burger-line bottom-burger"></span>
-          </div>
+          <button class="hamburger">
+            <span class="hamburger__box">
+              <span class="hamburger__inner"> </span>
+            </span>
+          </button>
           <nav class="navigation">
-            <a class="navigation__link" href="#"> home </a>
-            <a class="navigation__link" href="#"> tour </a>
-            <a class="navigation__link" href="#"> music </a>
-            <a class="navigation__link" href="#"> shop </a>
+            <ul class="navigation__list">
+              <li class="navigation__item"><a class="navigation__link" href="#"> home </a></li>
+              <li class="navigation__item"><a class="navigation__link" href="#"> tour </a></li>
+              <li class="navigation__item"><a class="navigation__link" href="#"> music </a></li>
+              <li class="navigation__item"><a class="navigation__link" href="#"> shop </a></li>
+            </ul>
           </nav>
 
           <div class="logo">RUSTY PINE</div>
@@ -40,17 +41,33 @@
             <ul class="socials">
               <li class="socials__item">
                 <a class="socials__link" href="#">
-                  <img src="../assets/img/facebook.svg" class="socials__icon" alt="rusty pine facebook">
+                  <img
+                    src="../assets/img/facebook.svg"
+                    class="socials__icon"
+                    alt="rusty pine facebook"
+                  />
                 </a>
               </li>
               <li class="socials__item">
                 <a class="socials__link" href="#">
-                  <img src="../assets/img/instagram.svg" class="socials__icon" alt="rusty pine instagram">
+                  <img
+                    src="../assets/img/instagram.svg"
+                    class="socials__icon"
+                    alt="rusty pine instagram"
+                  />
                 </a>
               </li>
               <li class="socials__item">
-                <a class="socials__link" href="https://www.youtube.com/@rustypine2266" target="_blank">
-                  <img src="../assets/img/youtube.svg" class="socials__icon" alt="rusty pine youtube">
+                <a
+                  class="socials__link"
+                  href="https://www.youtube.com/@rustypine2266"
+                  target="_blank"
+                >
+                  <img
+                    src="../assets/img/youtube.svg"
+                    class="socials__icon"
+                    alt="rusty pine youtube"
+                  />
                 </a>
               </li>
             </ul>
@@ -58,8 +75,7 @@
         </div>
       </header>
 
-      <section class="home">
-      </section>
+      <section class="home"></section>
       <section class="tour"></section>
       <section class="music"></section>
     </div>
